Add twitter bootstrap and template refactoring

--- a/src/heydollar/templates/transaction_history.html
+++ b/src/heydollar/templates/transaction_history.html
@@ -4,8 +4,8 @@
 {% block title %} Heydollar Transaction History {% endblock title %}
 {% block page_description %} Personal Finance management transaction history {% endblock page_description %}
 
+{% block h1_header %}Transaction History{% endblock h1_header %}
 {% block body %}
-    <p>To Do: Add homepage content here!</p>
     <table>
         <tr>
             <th>Date</th>
