--- a/src/project/templates/base.html
+++ b/src/project/templates/base.html
@@ -6,13 +6,19 @@
 	    <title>{% block title %}{% endblock title %}</title>
 	    <meta name="description" content="{% block page_description %}Heydollar Personal Finance{% endblock page_description %}">
 	    
-	    {% block header_tags %}{% endblock header_tags %}
+	    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/main.css" />
+        {% block header_tags %}{% endblock header_tags %}
    	</head>
     <body>
     	<div class="container">
-    	{% block body %}{% endblock body %}
+    	<h1>{% block h1_header %}{% endblock h1_header %}</h1>
+    	{% include "navbar.html" %}
+        {% block body %}{% endblock body %}
     	</div>
     	
+    	<script src="{{ STATIC_URL }}js/jquery.js"></script>
+        <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
     	{% block include_scripts %}{% endblock include_scripts %}
     </body>
 </html>
