--- a/src/heydollar/templates/categories.html
+++ b/src/heydollar/templates/categories.html
@@ -4,10 +4,9 @@
 {% block title %} Heydollar Spending Categories {% endblock title %}
 {% block page_description %} Personal Finance management spending categories {% endblock page_description %}
 
+{% block h1_header %}Spending Categories{% endblock h1_header %}
 {% block body %}
-    <p>To Do: Add homepage content here!</p>
-    <ul>Category List
-        <li>First Category Name</li>
+    <ul>
         {% for category in object_list %}
         <li>{{ category.name }}</li>
         {% endfor %}
