--- a/src/project/templates/navbar.html
+++ b/src/project/templates/navbar.html
@@ -2,18 +2,8 @@
 		<nav id='nav_menu' class="navbar">
     	    <a id='logo' class="brand" title='homepage' href='/'>Logo</a>
     		<ul class="nav">
-    			<li><a href='#'>Games</a></li>
-    			<li class='dropdown'>
-    			    <a href='#' class="dropdown-toggle" data-toggle="dropdown">
-    			        Players
-    				    <b class='caret'></b>
-    				</a>
-    				<ul class='dropdown-menu'>
-    					<li><a href='#'>Batters</a></li>
-    					<li><a href='#'>Hitters</a></li>
-    				</ul>
-    			</li>
-    			<li><a href='contact'>Contact</a></li>
+    			<li><a href='categories'>Categories</a></li>
+    			<li><a href='history'>Transactions</a></li>
     		</ul>
     	</nav>
 	</header>
