Reorganize file structure

--- a/src/project/templates/navbar.html
+++ b/src/project/templates/navbar.html
@@ -2,8 +2,8 @@
 		<nav id='nav_menu' class="navbar">
     	    <a id='logo' class="brand" title='homepage' href='/'>Logo</a>
     		<ul class="nav">
-    			<li><a href='categories'>Categories</a></li>
-    			<li><a href='history'>Transactions</a></li>
+    			<li><a href='/spending/categories'>Categories</a></li>
+    			<li><a href='/spending/history'>Transactions</a></li>
     		</ul>
     	</nav>
 	</header>
