minor changes, txn history template

--- a/src/project/templates/transaction_history.html
+++ b/src/project/templates/transaction_history.html
@@ -14,7 +14,7 @@
         </tr>
         {% for transaction in object_list %}
         <tr>
-            <td>{{ transaction.date }}</td>
+            <td>{{ transaction.post_date }}</td>
             <td>{{ transaction.description }}</td>
             <td>{{ transaction.amount }}</td>
             <td></td>
