Basic balance sheet summary view template

--- a/src/project/templates/categories.html
+++ b/src/project/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load url from future %}
 
-{% block title %} Heydollar Spending Categories {% endblock title %}
+{% block meta_title %} Heydollar Spending Categories {% endblock meta_title %}
 {% block page_description %} Personal Finance management spending categories {% endblock page_description %}
 
 {% block h1_header %}Spending Categories{% endblock h1_header %}
