--- a/src/project/templates/heydollar_index.html
+++ b/src/project/templates/heydollar_index.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% load url from future %}
 
-{% block title %} Heydollar {% endblock title %}
-{% block page_description %} Personal Finance management home page {% endblock page_description %}
+{% block meta_title %} Index page {% endblock meta_title %}
 
 {% block body %}
     <p>To Do: Add homepage content here!</p>
