--- a/src/project/templates/transaction_history.html
+++ b/src/project/templates/transaction_history.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load url from future %}
 
-{% block title %} Heydollar Transaction History {% endblock title %}
+{% block meta_title %} Heydollar Transaction History {% endblock meta_title %}
 {% block page_description %} Personal Finance management transaction history {% endblock page_description %}
 
 {% block h1_header %}Transaction History{% endblock h1_header %}
