--- a/src/project/templates/base.html
+++ b/src/project/templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	    <meta http-equiv="Content-Language" content="en-us" />
-	    <title>{% block title %}{% endblock title %}</title>
+	    <title>{% block meta_title %}{% endblock meta_title %}</title>
 	    <meta name="description" content="{% block page_description %}Heydollar Personal Finance{% endblock page_description %}">
 	    
 	    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" />
