Add modal window js files

--- a/src/project/templates/navbar.html
+++ b/src/project/templates/navbar.html
@@ -4,6 +4,9 @@
     		<ul class="nav">
     			<li><a href='/spending/categories'>Categories</a></li>
     			<li><a href='/spending/history'>Transactions</a></li>
+    			<li><input name="transactionHistoryUpload" type="file" />Upload Transaction History</li>
+    			<li><button class="modalInput" rel="#modTesting">Modal Testing</button></li>
     		</ul>
     	</nav>
+        <div class="modal" id="modTesting"> <h2>This is my test text</h2></div>
 	</header>
