--- a/src/project/media/static/css/main.css
+++ b/src/project/media/static/css/main.css
@@ -2,6 +2,17 @@
 header {
     overflow: auto;
 }
+
+.modal {
+    background-color:#fff;
+    display:none;
+    width:350px;
+    padding:15px;
+    text-align:left;
+    border:2px solid #333;
+    opacity:0.8;
+}
+
 #nav_menu {
     font-family: Verdana, Arial, Sans-Serif;
     width: 80%;
