Add list and create view FinInst. Update Nav Bar menu

--- a/src/project/templates/navbar.html
+++ b/src/project/templates/navbar.html
@@ -2,8 +2,9 @@
 		<nav id='nav_menu' class="navbar">
     	    <a id='logo' class="brand" title='homepage' href='/'>Logo</a>
     		<ul class="nav">
-    			<li><a href='/spending/categories'>Categories</a></li>
-    			<li><a href='/spending/history'>Transactions</a></li>
+    			<li><a href='/account'>Accounts</a></li>
+                <li><a href='/spending/categories'>Categories</a></li>
+                <li><a href='/spending/history'>Transactions</a></li>
     			<li>
     			    <button class="modalInput" rel="#txnUploadForm">Upload Transaction History</button>
     			    <div class="modal" id="txnUploadForm">{% include "transactionUploadForm.html" %}</div>
