--- a/src/project/templates/account/account_list.html
+++ b/src/project/templates/account/account_list.html
@@ -5,7 +5,9 @@
 
 {% block h1_header %}Accounts List{% endblock h1_header %}
 {% block body %}
+    <a class="button" href="/account/add">Add New</a>
     <table>
+    {% if object_list %}
         <tr>
             <th>Type</th>
             <th>Description</th>
@@ -13,13 +15,14 @@
         </tr>
         {% for account in object_list %}
         <tr>
-            <td>{{ account.type.name }}</td>
+            <td>{{ account.type }}</td>
             <td>{{ account.description }}</td>
             <td>{{ account.institution.name }}</td>
             <td></td>
         </tr>
-        {% empty %}
-        <tr><td colspan=3>No Accounts available</td></tr>
         {% endfor %}
+    {% else %}
+        <tr><td colspan=3>No Accounts available</td></tr>
+    {% endif %}
     </table>
 {% endblock body %}
