begin feature to allow prompting to create new Account object on failed upload

--- a/src/project/templates/account/account_form.html
+++ b/src/project/templates/account/account_form.html
@@ -1,3 +1,6 @@
+<div class='alert'>
+    Redirect Message {{ request.GET.account_name }}
+</div>
 <form action="/account/add" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
